// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminLessonsInfo component Should create new lesson 1`] = `
<div>
  <div
    class="col-8 text-center"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-primary font-weight-bold display-3"
      >
        Create New Lesson
      </span>
    </div>
    <div
      class="row"
    >
      <div
        class="card shadow-sm col-12"
      >
        <div
          class="card-body text-center"
        />
        <div
          class="text-left"
        >
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5title0"
            >
              Title
            </h5>
            <input
              class="form-control"
              data-testid="input0"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5description1"
            >
              Description
            </h5>
            <div
              style="background-color: white;"
            >
              <button
                class="btn"
                style="color: rgb(41, 41, 41);"
              >
                Write
              </button>
              <button
                class="btn"
                style="color: rgb(142, 142, 142);"
              >
                Preview
              </button>
              <textarea
                class="textarea"
                data-testid="textbox"
                placeholder="Type something..."
              />
            </div>
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5docUrl2"
            >
              Docurl
            </h5>
            <input
              class="form-control"
              data-testid="input2"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5githubUrl3"
            >
              Githuburl
            </h5>
            <input
              class="form-control"
              data-testid="input3"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5videoUrl4"
            >
              Videourl
            </h5>
            <input
              class="form-control"
              data-testid="input4"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5order5"
            >
              Order
            </h5>
            <input
              class="form-control"
              data-testid="input5"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5chatUrl6"
            >
              Chaturl
            </h5>
            <input
              class="form-control"
              data-testid="input6"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="text-center mb-4"
        >
          <button
            class="btn bg-primary"
            style="color: rgb(255, 255, 255);"
          >
            Create Lesson
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminLessonsInfo component Should create new lesson 2`] = `
<div>
  <div
    class="col-8 text-center"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-primary font-weight-bold display-3"
      >
        Create New Lesson
      </span>
    </div>
    <div
      class="row"
    >
      <div
        class="card shadow-sm col-12"
      >
        <div
          class="card-body text-center"
        />
        <div
          class="text-left"
        >
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5title0"
            >
              Title
            </h5>
            <input
              class="form-control"
              data-testid="input0"
              placeholder=""
              type="text"
              value="New Lesson"
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5description1"
            >
              Description
            </h5>
            <div
              style="background-color: white;"
            >
              <button
                class="btn"
                style="color: rgb(41, 41, 41);"
              >
                Write
              </button>
              <button
                class="btn"
                style="color: rgb(142, 142, 142);"
              >
                Preview
              </button>
              <textarea
                class="textarea"
                data-testid="textbox"
                placeholder="Type something..."
                style="height: 2px;"
              >
                New description
              </textarea>
            </div>
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5docUrl2"
            >
              Docurl
            </h5>
            <input
              class="form-control"
              data-testid="input2"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5githubUrl3"
            >
              Githuburl
            </h5>
            <input
              class="form-control"
              data-testid="input3"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5videoUrl4"
            >
              Videourl
            </h5>
            <input
              class="form-control"
              data-testid="input4"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5order5"
            >
              Order
            </h5>
            <input
              class="form-control"
              data-testid="input5"
              placeholder=""
              type="text"
              value="12"
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5chatUrl6"
            >
              Chaturl
            </h5>
            <input
              class="form-control"
              data-testid="input6"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="text-center mb-4"
        >
          <button
            class="btn bg-primary"
            style="color: rgb(255, 255, 255);"
          >
            Create Lesson
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminLessonsInfo component Should render non-existent lesson 1`] = `
<div>
  <div
    class="col-8 text-center"
  >
    <span
      class="text-primary font-weight-bold display-3"
    >
      Lesson Info
    </span>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Foundations of JavaScript
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Foundations of JavaScript"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  A super simple introduction to help you get started!
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5docUrl3"
              >
                Docurl
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="https://www.notion.so/garagescript/JS-0-Foundations-a43ca620e54945b2b620bcda5f3cf672"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5githubUrl4"
              >
                Githuburl
              </h5>
              <input
                class="form-control"
                data-testid="input4"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5videoUrl5"
              >
                Videourl
              </h5>
              <input
                class="form-control"
                data-testid="input5"
                placeholder=""
                type="text"
                value="https://www.youtube.com/watch?v=H-eqRQo8KoI&list=PLKmS5c0UNZmewGBWlz0l9GZwh3bV8Rlc7&index=1"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order6"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input6"
                placeholder=""
                type="text"
                value="0"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5chatUrl7"
              >
                Chaturl
              </h5>
              <input
                class="form-control"
                data-testid="input7"
                placeholder=""
                type="text"
                value="https://chat.c0d3.com/c0d3/channels/js1-variablesfunction"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Lesson
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="mb-2"
    >
      <div
        class="mb-3 text-center"
      >
        <span
          class="text-primary font-weight-bold display-3"
        >
          Create New Challenge
        </span>
      </div>
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          />
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title0"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input0"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description1"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                />
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order2"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input2"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Create Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <span
      class="text-primary font-weight-bold display-3"
    >
      Lesson Challenges
    </span>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Sum of 2 Numbers
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Sum of 2 Numbers"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and returns their sum.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return 14
solution(4,1) // Should return 5
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="1"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Sum of 3 Numbers
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Sum of 3 Numbers"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 3 numbers and returns their sum.

Here's how another developer might use your function:

\`\`\`
solution(5,9,2) // Should return 16
solution(4,1,9) // Should return 14
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="2"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Greater than 5
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Greater than 5"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.

Here's how another developer might use your function:

\`\`\`
solution(9) // Should return true
solution(4) // Should return false
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="3"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Biggest Num out of 2
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Biggest Num out of 2"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and return the largest out of them.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return 9
solution(4,1) // Should return 4
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="4"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Biggest Num Out of 3
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Biggest Num Out of 3"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 3 numbers and return the largest out of them.


Here's how another developer might use your function:

\`\`\`
solution(5,9,14) // Should return 14
solution(4,5,1) // Should return 5
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="5"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Is First Num Bigger
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Is First Num Bigger"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and returns true if the first number is greater than the second, false otherwise.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return false
solution(4,1) // Should return true
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="6"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Is Sum &gt; 10
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Is Sum > 10"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and returns true if their sum is greater than 10.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return true
solution(4,1) // Should return false
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="7"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Functional Sum
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Functional Sum"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Takes in 2 numbers, return a function that returns the sum when the function is called 

Example:

\`\`\`
const a = solution(5,6) // a is a function, and a() will return 11
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="8"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Functional 3 Sum
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Functional 3 Sum"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers, return a function that takes in a number that returns the sum of all 3 numbers when called. 
Example:

\`\`\` 
const a = solution(1,2); // a is a function
// a(1) returns 4 because 1+2+1
// a(5) returns 8 because 1 + 2 + 5 
// a(2) returns 5 because 1 + 2 + 2
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="9"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Functional Sums
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Functional Sums"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 functions and returns the sum of the result of the 2 functions
Example:

\`\`\`
const a = () =&gt; {  return 5; }
const b = () =&gt; {  return 6; }
const c = solution(a, b) // c should be 11 because a() + b()
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="10"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminLessonsInfo component Should render undefined lessons 1`] = `
<div>
  <div
    class="col-8 text-center"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-primary font-weight-bold display-3"
      >
        Create New Lesson
      </span>
    </div>
    <div
      class="row"
    >
      <div
        class="card shadow-sm col-12"
      >
        <div
          class="card-body text-center"
        />
        <div
          class="text-left"
        >
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5title0"
            >
              Title
            </h5>
            <input
              class="form-control"
              data-testid="input0"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5description1"
            >
              Description
            </h5>
            <div
              style="background-color: white;"
            >
              <button
                class="btn"
                style="color: rgb(41, 41, 41);"
              >
                Write
              </button>
              <button
                class="btn"
                style="color: rgb(142, 142, 142);"
              >
                Preview
              </button>
              <textarea
                class="textarea"
                data-testid="textbox"
                placeholder="Type something..."
              />
            </div>
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5docUrl2"
            >
              Docurl
            </h5>
            <input
              class="form-control"
              data-testid="input2"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5githubUrl3"
            >
              Githuburl
            </h5>
            <input
              class="form-control"
              data-testid="input3"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5videoUrl4"
            >
              Videourl
            </h5>
            <input
              class="form-control"
              data-testid="input4"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5order5"
            >
              Order
            </h5>
            <input
              class="form-control"
              data-testid="input5"
              placeholder=""
              type="text"
              value=""
            />
          </div>
          <div
            class="d-flex flex-column ml-3 mr-3 mb-4"
          >
            <h5
              data-testid="h5chatUrl6"
            >
              Chaturl
            </h5>
            <input
              class="form-control"
              data-testid="input6"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="text-center mb-4"
        >
          <button
            class="btn bg-primary"
            style="color: rgb(255, 255, 255);"
          >
            Create Lesson
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminLessonsInfo component Should update lesson sucessfully 1`] = `
<div>
  <div
    class="col-8 text-center"
  >
    <span
      class="text-primary font-weight-bold display-3"
    >
      Lesson Info
    </span>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Foundations of JavaScript
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Foundations of JavaScript"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                  style="height: 2px;"
                >
                  New description
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5docUrl3"
              >
                Docurl
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="https://www.notion.so/garagescript/JS-0-Foundations-a43ca620e54945b2b620bcda5f3cf672"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5githubUrl4"
              >
                Githuburl
              </h5>
              <input
                class="form-control"
                data-testid="input4"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5videoUrl5"
              >
                Videourl
              </h5>
              <input
                class="form-control"
                data-testid="input5"
                placeholder=""
                type="text"
                value="https://www.youtube.com/watch?v=H-eqRQo8KoI&list=PLKmS5c0UNZmewGBWlz0l9GZwh3bV8Rlc7&index=1"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order6"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input6"
                placeholder=""
                type="text"
                value="10"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5chatUrl7"
              >
                Chaturl
              </h5>
              <input
                class="form-control"
                data-testid="input7"
                placeholder=""
                type="text"
                value="https://chat.c0d3.com/c0d3/channels/js1-variablesfunction"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Lesson
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="mb-2"
    >
      <div
        class="mb-3 text-center"
      >
        <span
          class="text-primary font-weight-bold display-3"
        >
          Create New Challenge
        </span>
      </div>
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          />
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title0"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input0"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description1"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                />
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order2"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input2"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Create Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <span
      class="text-primary font-weight-bold display-3"
    >
      Lesson Challenges
    </span>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Sum of 2 Numbers
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="New Lesson"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and returns their sum.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return 14
solution(4,1) // Should return 5
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="1"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Sum of 3 Numbers
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Sum of 3 Numbers"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 3 numbers and returns their sum.

Here's how another developer might use your function:

\`\`\`
solution(5,9,2) // Should return 16
solution(4,1,9) // Should return 14
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="2"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Greater than 5
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Greater than 5"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in a number and returns true if that number is greater than 5. Otherwise, return false.

Here's how another developer might use your function:

\`\`\`
solution(9) // Should return true
solution(4) // Should return false
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="3"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Biggest Num out of 2
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Biggest Num out of 2"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and return the largest out of them.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return 9
solution(4,1) // Should return 4
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="4"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Biggest Num Out of 3
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Biggest Num Out of 3"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 3 numbers and return the largest out of them.


Here's how another developer might use your function:

\`\`\`
solution(5,9,14) // Should return 14
solution(4,5,1) // Should return 5
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="5"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Is First Num Bigger
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Is First Num Bigger"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and returns true if the first number is greater than the second, false otherwise.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return false
solution(4,1) // Should return true
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="6"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Is Sum &gt; 10
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Is Sum > 10"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers and returns true if their sum is greater than 10.

Here's how another developer might use your function:

\`\`\`
solution(5,9) // Should return true
solution(4,1) // Should return false
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="7"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Functional Sum
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Functional Sum"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Takes in 2 numbers, return a function that returns the sum when the function is called 

Example:

\`\`\`
const a = solution(5,6) // a is a function, and a() will return 11
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="8"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Functional 3 Sum
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Functional 3 Sum"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 numbers, return a function that takes in a number that returns the sum of all 3 numbers when called. 
Example:

\`\`\` 
const a = solution(1,2); // a is a function
// a(1) returns 4 because 1+2+1
// a(5) returns 8 because 1 + 2 + 5 
// a(2) returns 5 because 1 + 2 + 2
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="9"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="row"
      >
        <div
          class="card shadow-sm col-12"
        >
          <div
            class="card-body text-center"
          >
            <h2
              class="card-title font-weight-bold mb-3"
            >
              Functional Sums
            </h2>
          </div>
          <div
            class="text-left"
          >
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5title1"
              >
                Title
              </h5>
              <input
                class="form-control"
                data-testid="input1"
                placeholder=""
                type="text"
                value="Functional Sums"
              />
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5description2"
              >
                Description
              </h5>
              <div
                style="background-color: white;"
              >
                <button
                  class="btn"
                  style="color: rgb(41, 41, 41);"
                >
                  Write
                </button>
                <button
                  class="btn"
                  style="color: rgb(142, 142, 142);"
                >
                  Preview
                </button>
                <textarea
                  class="textarea"
                  data-testid="textbox"
                  placeholder="Type something..."
                >
                  Write a function that takes in 2 functions and returns the sum of the result of the 2 functions
Example:

\`\`\`
const a = () =&gt; {  return 5; }
const b = () =&gt; {  return 6; }
const c = solution(a, b) // c should be 11 because a() + b()
\`\`\`
                </textarea>
              </div>
            </div>
            <div
              class="d-flex flex-column ml-3 mr-3 mb-4"
            >
              <h5
                data-testid="h5order3"
              >
                Order
              </h5>
              <input
                class="form-control"
                data-testid="input3"
                placeholder=""
                type="text"
                value="10"
              />
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <button
              class="btn bg-primary"
              style="color: rgb(255, 255, 255);"
            >
              Update Challenge
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
